Continuing rewrite.